syntax = "proto3";
option csharp_namespace = "gRPC";

package grpc;

message CreateProductRequest {
	string name = 1;
	string description = 2;
	double price = 3;
}

message ProductResponse {
	int64 id = 1;
	string name = 2;
	string description = 3;
	double price = 4;
}

message GetProductRequest {
	int64 id = 1;
}

message GetProductsRequest {}


message GetProductsResponse {
	repeated ProductResponse products = 1;
}

service ProductGrpcService {
	rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
	rpc GetProduct(GetProductRequest) returns (ProductResponse);
	rpc GetProducts(GetProductsRequest) returns (GetProductsResponse);
}